add cross-links to related tools

--- a/index.html
+++ b/index.html
@@ -62,5 +62,20 @@
       <button class="close-btn" onclick="document.getElementById('tipModal').classList.remove('show')">Close</button>
     </div>
   </div>
+<div class="more-tools" style="max-width:800px;margin:40px auto;padding:20px;background:#f8f9fa;border-radius:12px;text-align:center">
+  <h3 style="margin-bottom:12px">🔗 More Free Tools</h3>
+  <div style="display:flex;flex-wrap:wrap;gap:8px;justify-content:center">
+    <a href="https://rorojiao.github.io/devtoolbox/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🛠️ DevToolbox</a>
+    <a href="https://rorojiao.github.io/texttoolkit/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">📝 TextToolkit</a>
+    <a href="https://rorojiao.github.io/passwordfort/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🔐 PasswordFort</a>
+    <a href="https://rorojiao.github.io/colorpick/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🎨 ColorPick</a>
+    <a href="https://rorojiao.github.io/qrcraft/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">📱 QRCraft</a>
+    <a href="https://rorojiao.github.io/cryptogauge/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">📊 CryptoGauge</a>
+    <a href="https://rorojiao.github.io/calcsmart/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🧮 CalcSmart</a>
+    <a href="https://rorojiao.github.io/mysticfate/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🌙 MysticFate</a>
+    <a href="https://rorojiao.github.io/psychetest/" style="padding:6px 14px;background:#fff;border-radius:20px;text-decoration:none;color:#333;border:1px solid #e0e0e0;font-size:14px">🧠 PsycheTest</a>
+  </div>
+</div>
+
 </body>
 </html>
