fix: UX improvements - update H1 text for SEO

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
 
   <section class="hero">
-    <h1>Lightweight <em>SEO</em> Tools</h1>
+    <h1>Free SEO Analysis Tools 🔍</h1>
     <p>Instant SEO analysis right in your browser. No signup, no server calls, 100% free &amp; open source.</p>
   </section>
 
