improve: SEO + UX enhancements - add OG tags, canonical URLs, JSON-LD schema, meta descriptions

--- a/heading.html
+++ b/heading.html
@@ -7,6 +7,23 @@
   <meta name="description" content="Visualize your page's H1-H6 heading hierarchy and catch SEO issues like missing H1 or skipped levels.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+    <meta property="og:title" content="Heading Structure Analyzer — SEOLite">
+    <meta property="og:description" content="Free online SEO tools - meta tag checker, heading analyzer and robots.txt generator">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rorojiao.github.io/seolite/heading.html">
+    <link rel="canonical" href="https://rorojiao.github.io/seolite/heading.html">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Heading Structure Analyzer — SEOLite",
+        "description": "Free online SEO tools - meta tag checker, heading analyzer and robots.txt generator",
+        "url": "https://rorojiao.github.io/seolite/heading.html",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "All",
+        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
 </head>
 <body>
   <nav>
