--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://rorojiao.github.io/seolite/">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "SEOLite 🔍 — Free Lightweight SEO Tools",
+        "description": "Free, lightweight SEO tools for webmasters and marketers. Check meta tags, analyze heading structure, generate robots.txt — all in your browser.",
+        "url": "https://rorojiao.github.io/seolite/",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "All",
+        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
 </head>
 <body>
   <nav>
