--- a/meta-checker.html
+++ b/meta-checker.html
@@ -7,6 +7,18 @@
   <meta name="description" content="Paste your HTML source to analyze meta tags, Open Graph, title length, and get an SEO score.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Meta Tag Checker — SEOLite",
+        "description": "Paste your HTML source to analyze meta tags, Open Graph, title length, and get an SEO score.",
+        "url": "https://rorojiao.github.io/seolite/meta-checker.html",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "All",
+        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
 </head>
 <body>
   <nav>
