--- a/robots.html
+++ b/robots.html
@@ -7,6 +7,23 @@
   <meta name="description" content="Generate a valid robots.txt file with custom Allow/Disallow rules and sitemap URLs.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+    <meta property="og:title" content="Robots.txt Generator — SEOLite">
+    <meta property="og:description" content="Generate a valid robots.txt file with custom Allow/Disallow rules and sitemap URLs.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rorojiao.github.io/seolite/robots.html">
+    <link rel="canonical" href="https://rorojiao.github.io/seolite/robots.html">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Robots.txt Generator — SEOLite",
+        "description": "Generate a valid robots.txt file with custom Allow/Disallow rules and sitemap URLs.",
+        "url": "https://rorojiao.github.io/seolite/robots.html",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "All",
+        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
 </head>
 <body>
   <nav>
