feat: add AADS crypto ad placeholder

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     </div>
   </section>
 
+<!-- AADS Crypto Ad -->
+<div id="aads-ad" style="text-align:center;margin:20px auto;max-width:728px;">
+  <!-- Ad unit will be inserted after AADS registration -->
+  <!-- Replace AD_UNIT_ID with actual ID from aads.com -->
+  <!-- <iframe data-aa="AD_UNIT_ID" src="//ad.aads.com/AD_UNIT_ID?size=728x90" style="width:728px;height:90px;border:0;padding:0;overflow:hidden;background-color:transparent;"></iframe> -->
+</div>
   <footer>
     <p>SEOLite — Open-source SEO toolkit. No data leaves your browser.</p>
     <a class="tip-btn" onclick="document.getElementById('tipModal').classList.add('show')">☕ Buy me a coffee</a>
